[tool.poetry]
name = "tick"
version = "0.1.0"
description = ""
authors = ["Dmitriy Shikhalev <dmitriy.shikhalev@gmail.com>"]
readme = "README.md"
packages = [{ include = "tick" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
pytest = "^8.1.1"
mypy = "^1.9.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
